--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
   <script type="text/x-handlebars" id="index">
     <ul>
     {{#each item in model}}
-      <li>{{item}}</li>
+      <li>{{pretty-color name=item}}</li>
     {{/each}}
     </ul>
+  </script>
+
+  <script type="text/x-handlebars" data-template-name="components/pretty-color">
+    Pretty Color: {{name}}
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
