--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
   <script src="js/libs/jquery-1.10.2.js"></script>
   <script src="js/libs/handlebars-1.1.2.js"></script>
   <script src="js/libs/ember-1.4.0.js"></script>
+
   <script src="js/app.js"></script>
+  <script src="js/routes/index-route.js"></script>
+  <script src="js/components/pretty-color-component.js"></script>
+  <script src="js/helpers/reverse-word.js"></script>
+
   <!-- to activate the test runner, add the "?test" query string parameter -->
   <script src="tests/runner.js"></script>
 </body>
