added templateless component and route specs

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script src="js/app.js"></script>
   <script src="js/routes/index-route.js"></script>
   <script src="js/components/pretty-color-component.js"></script>
+  <script src="js/components/template-less-component.js"></script>
   <script src="js/helpers/reverse-word.js"></script>
 
   <!-- to activate the test runner, add the "?test" query string parameter -->
